Intro-HTML-CSS-exercise

--- a/module-3/01_Intro_HTML_CSS/exercise/index.html
+++ b/module-3/01_Intro_HTML_CSS/exercise/index.html
@@ -4,8 +4,69 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fan Page</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    
+    <header>
+        <h1>Ororo Munroe</h1>
+        <p>Princess of N'Dare</p>
+    </header>
+    <main>
+        <img src="img/Ororo_Munroe_29_from_X-Men_Red_Vol_2_1_001.webp" alt="Storm from Xmen"/>
+        <section id="facts-section">
+            <h2 id="facts-heading">Features</h2>
+            <table id="facts-table">
+                <thead>
+                    <tr>
+                        <th>Show/Movie</th>
+                        <th>Year Released</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>X-Men: The Animated Series</td>
+                        <td>1992-1997</td>
+                    </tr>
+                    <tr>
+                        <td>X-Men:Evolution</td>
+                        <td>2000-2003</td>
+                    </tr>
+                    <tr>
+                        <td>X-Men(film series)</td>
+                        <td>2000-2020</td>
+                    </tr>
+                    <tr>
+                        <td>Wolverine and the X-Men</td>
+                        <td>2009</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <div>
+            <section id="quotes-section">
+                    <h2 id="quotes-heading">Favorite Quotes</h2>
+                <blockquote>
+                    <p>I am a woman, a mutant, a theif, and X-Men, a lover, a wife, a queen. I am all of these things. I am Storm, and for me, there are no such things as limits.</p>
+                </blockquote>
+                <blockquote>
+                    <p>Mutantkind will always find a way to endure. We are survivors! That is our nature.</p>
+                </blockquote>
+                <blockquote>
+                    <p>Remember that little conversation we had, Quentin? Remember what I told you right before you left the school for the Hellfire Club? Payback's a b****. Well, heres your payback.....b****.</p>
+                </blockquote>
+            </section>
+        </div>
+        <div>
+            <section id="links-section">
+                <h2>Links</h2>
+                <ul id="links">
+                    <li><a href="http://www.marvel.com/">Marvel.com</a></li>
+                    <li><a href="http://en.wikipedia.org/wiki/">Wikipedia.org</a></li>
+                    <li><a href="http://uncannyxmen.net/characters/storm">uncannyxmen.net Spotlight On Storm</a></li>
+                </ul>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
