--- a/module-3/02_CSS_Selectors/lecture/trello/index.html
+++ b/module-3/02_CSS_Selectors/lecture/trello/index.html
@@ -8,7 +8,8 @@
     <link
       href="https://fonts.googleapis.com/css?family=Raleway"
       rel="stylesheet"
-    />        
+    />
+    <link rel="stylesheet" href="style.css"/>
   </head>
 
   <body>
@@ -50,7 +51,7 @@
         <a href="#">Add another card</a>
       </div>
 
-      <!-- <div class="trello-list">
+       <div class="trello-list">
         <h2>Module 1 Week 1</h2>
         <ol class="cards">
           <li class="card">
@@ -93,7 +94,7 @@
         </ol>
         <a href="#">Add another card</a>
       </div>
-
+      <!---
       <div class="trello-list">
         <h2>Module 1 Week 2</h2>
         <ol class="cards">
